# Beacon

./: .gitignore  Cargo.lock.backup  Cargo.toml  MIGRATION.md  QUICKSTART.md  README.md  build.rs  deploy.sh  package-lock.json  package.json  worker.js  wrangler.toml
.github/workflows/: CargoUpdater.yml  cargo-lock-regenerator.yml  cargo-lock-updater.yml  cargo-update.yml  cargo-updater.yml  cf.yml  clear-cache.yml  code-locked.yml  dependency-update.yml  deploy-js.yml  fix-cargo-lock.yml  js-branch-ci.yml  manual-deploy.yml  regenerate-cargo-lock.yml  test-deploy.yml  update-cargo-lock.yml  updater.yml
docs/: CARGO_LOCK_UPDATER.md  PROXY_MANAGEMENT.md  UDP_RELAY.md  WORKER_0.7.0_COMPATIBILITY.md
scripts/: update-cargo-lock.sh
src/: config.js  config.rs  index.js  lib.rs
src/common/: error.rs  mod.rs
src/proxy/: conn.rs  dns.rs  mod.rs  shadowsocks.js  shadowsocks.rs  stream.js  trojan.js  trojan.rs  udp_relay.rs  vless.js  vless.rs  vmess.js  vmess.rs
web/: checker.html
