[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.44", features = ["io-util", "rt"] }
bytes = "1.10"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
pin-project-lite = "0.2"
worker = "=0.6.1"
pretty-bytes = "0.2.2"
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
uuid = "1.16"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
md-5 = "0.10"
anyhow = "1.0"
reqwest = "0.12"
regex = "1.11"
once_cell = "1.21"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
