[package]
name = "beacon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Tokio without runtime - only I/O traits for WASM compatibility
tokio = { version = "1.28", default-features = false, features = ["io-util"] }
bytes = "1.4.0"
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
pin-project-lite = "0.2"
worker = "0.7.0"
pretty-bytes = "0.2.2"
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
uuid = "1.8.0"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10"
md-5 = "0.10"
anyhow = "1.0.86"
# WASM-compatible reqwest: disable native features, enable only JSON support
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
regex = "1.11.1"
once_cell = "1.21.3"
# Pin to 0.2.106 (latest, supported by worker 0.7.0 as of PR #883)
wasm-bindgen = "=0.2.106"
# Pin wasm-bindgen-futures to compatible version for wasm-bindgen 0.2.106
wasm-bindgen-futures = "=0.4.56"
gloo-timers = { version = "0.3", features = ["futures"] }

# Optimized release profile for Cloudflare Workers deployment
# Prioritizes binary size and cold start performance
[profile.release]
opt-level = "z"      # Optimize for size (critical for 1MB Workers limit)
lto = true           # Link-time optimization for smaller, faster code
strip = true         # Remove debug symbols (production-ready)
codegen-units = 1    # Single codegen unit for maximum optimization
panic = "abort"      # Abort on panic (smaller binary, appropriate for Workers)